# muceni

./: .gitignore  Dockerfile  config.py  db.py  files.py  main.py  models.py  pyproject.toml
app/: confirmation.py  orm.py  token.py
db/: schema.sql
db/migrations/: 20230422123432_create_users_files_votes_registrations.sql
models/: filenames.py
static/: main_20230213.css  main_20230831.css
templates/: confirmation.jinja  confirmed.jinja  grade.jinja  home.jinja  login.jinja  logout.jinja  page.jinja  profile.jinja  registration.jinja  subject.jinja  upload.jinja  uploaded.jinja
templates/inputs/: email.jinja  subject.jinja
