[tool.poetry]
name = "testiky"
version = "0.1.0"
description = ""
authors = ["Michal Janočko <michal@janocko.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.91.0"}
python-dotenv = "^0.21.1"
aiofiles = "^23.1.0"
pydantic = "^1.10.4"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
aerich = "^0.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
